diary/users/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: users
    version: v1
  name: users-deployment
  namespace: diary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
        version: v1
    spec:
      restartPolicy: Always
      containers:
      - image: rasouza/diary-users
        name: users
        ports:
          - containerPort: 8000
  revisionHistoryLimit: 0
