diary/users/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: users
    service: users
  name: users-svc
  namespace: diary
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 8000
  selector:
    app: users
