diary/users/virtualsvc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: users-virtual-svc
spec:
  hosts:
    - users.diary.localhost
  gateways:
    - diary-gateway
  http:
  - route:
    - destination:
        host: users-svc
        port:
          number: 8000
